--- a/ElectronsFlaskTest/html/idea_visualization.html
+++ b/ElectronsFlaskTest/html/idea_visualization.html
@@ -53,7 +53,7 @@
         </div>
       </div>
       <div id="canvas" style="align-content: center;"></div>
-      <div id="warning" style="display: none;"><h1>¡No se ha realizado la estructuración general!</h1></div>
+      <div id="warning" style="display: none;"><h1>There's no general structure saved for this session.</h1></div>
     </div>
  </body>
 </html>
