--- a/ElectronsFlaskTest/html/categories.html
+++ b/ElectronsFlaskTest/html/categories.html
@@ -45,6 +45,9 @@
 							<li class="nav-item active">
 								<a class="nav-link" href="priority_visualization.html">Resulting priorities</a>
 							</li>
+							<li class="nav-item">
+								<a class="nav-link active" href="" id='print-pdf'> Report Generation</a>
+							</li>
 						</ul>
 					</nav>
 				</div>
@@ -62,7 +65,6 @@
 				<div class="col-md-6" id="categoriesSection2">
 				</div>
 			</div>
-			<button id='print-pdf'>Print</button>
 		</div>
 		<!-- https://stackoverflow.com/questions/32621988/electron-jquery-is-not-defined -->
 		<script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
