--- a/ElectronsFlaskTest/html/estructura_campo.html
+++ b/ElectronsFlaskTest/html/estructura_campo.html
@@ -44,7 +44,10 @@
 			        </li>
 			        <li class="nav-item active">
 			          <a class="nav-link" href="priority_visualization.html">Resulting priorities</a>
-			        </li>
+							</li>
+							<li class="nav-item">
+			          <a class="nav-link active" href="" id='print-pdf'> Report Generation</a>
+							</li>
 			      </ul>
 			    </nav>
 			  </div>
@@ -66,7 +69,6 @@
 					<h1></h1>
 				</div>
 			</div>
-			<button id='print-pdf'>Print</button>
 		</div>
 		<!-- https://stackoverflow.com/questions/32621988/electron-jquery-is-not-defined -->
 		<script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
