--- a/ElectronsFlaskTest/html/sessionIdeas.html
+++ b/ElectronsFlaskTest/html/sessionIdeas.html
@@ -45,7 +45,10 @@
 			        </li>
 			        <li class="nav-item active">
 			          <a class="nav-link" href="priority_visualization.html">Resulting priorities</a>
-			        </li>
+							</li>
+							<li class="nav-item">
+			          <a class="nav-link active" href="" id='print-pdf'> Report Generation</a>
+							</li>
 			      </ul>
 			    </nav>
 			  </div>
@@ -63,8 +66,6 @@
 					<button type="button" class="btn btn-primary btn-lg btn-block mt-4" id="saveIdeas">Save idea compression</button>
 				</div>
 			</div>
-			
-			<button id='print-pdf'>Print</button>
 		</div>
 	
 		<!-- https://stackoverflow.com/questions/32621988/electron-jquery-is-not-defined -->
