--- a/ElectronsFlaskTest/html/sessionVoting.html
+++ b/ElectronsFlaskTest/html/sessionVoting.html
@@ -43,6 +43,9 @@
 				<li class="nav-item active">
 					<a class="nav-link" href="priority_visualization.html">Resulting priorities</a>
 				</li>
+				<li class="nav-item">
+					<a class="nav-link active" href="" id='print-pdf'> Report Generation</a>
+				</li>
 			</ul>
 		</nav>
 		<div id="CaptureVotingScheme" class="container-fluid" style="font-family: 'Roboto', sans-serif; height: 90vh; width: 100%; overflow-y: scroll; display: none">
@@ -61,7 +64,6 @@
 				</form>
 			</div>
 		</div>
-		<button id='print-pdf'>Print</button>
 		<div id="CaptureVotes" class="container-fluid" style="font-family: 'Roboto', sans-serif; width: 100%; overflow-y: scroll; display: none">
 			<div class="row">
 				<div>
