--- a/ElectronsFlaskTest/html/triggeringQuestion.html
+++ b/ElectronsFlaskTest/html/triggeringQuestion.html
@@ -46,7 +46,10 @@
 			        </li>
 			        <li class="nav-item active">
 			          <a class="nav-link" href="priority_visualization.html">Resulting priorities</a>
-			        </li>
+							</li>
+							<li class="nav-item">
+			          <a class="nav-link active" href="" id='print-pdf'> Report Generation</a>
+							</li>
 			      </ul>
 			    </nav>
 			  </div>
@@ -76,7 +79,6 @@
 				</div>
 			</div>
 		</div>
-		<button id='print-pdf'>Print</button>
 		<!-- Modal INPUT IDEA-->
 		<div class="modal fade" id="addIdea" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 			<div class="modal-dialog modal-dialog-centered" role="document">
