--- a/ElectronsFlaskTest/html/idea_visualization.html
+++ b/ElectronsFlaskTest/html/idea_visualization.html
@@ -48,6 +48,9 @@
               <li class="nav-item active">
                 <a class="nav-link" href="priority_visualization.html">Resulting priorities</a>
               </li>
+              <li class="nav-item">
+			          <a class="nav-link active" href="" id='print-pdf'> Report Generation</a>
+							</li>
             </ul>
           </nav>
         </div>
