--- a/ElectronsFlaskTest/html/sessionIdeas.html
+++ b/ElectronsFlaskTest/html/sessionIdeas.html
@@ -10,8 +10,8 @@
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 		<link href="../styles/projects.css" rel="stylesheet">
 	</head>
-	<body style="padding-top: 65px">
-		<div class="container-fluid" style="font-family: 'Roboto', sans-serif; height: 90vh; width: 100%; overflow-y: scroll">
+	<body style="padding-top: 80px">
+		<div class="container-fluid" style="font-family: 'Roboto', sans-serif; height: 90vh; width: 100%;">
 			<div class="row">
 			  <div class="col-md-12">
 			    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
@@ -59,7 +59,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-9" id="ideasSection"></div>
+				<div class="col-9" id="ideasSection" style="height: 85%"></div>
 				<div class="col-3">
 					<button type="button" class="btn btn-secondary btn-lg btn-block mt-4" id="showParticipants">Show participants</button>
 					<button type="button" class="btn btn-secondary btn-lg btn-block mt-4" id="showClarifications">Show clarifications</button>
