--- a/ElectronsFlaskTest/html/sessionIdeas.html
+++ b/ElectronsFlaskTest/html/sessionIdeas.html
@@ -14,7 +14,7 @@
 			<div class="row">
 			  <div class="col-md-12">
 			    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-			      <ul class="navbar-nav">
+			      <ul class="navbar-nav nav-fill">
 			        <li class="nav-item active">
 			          <a class="nav-link" href="session.html">Back</a>
 			        </li>
