--- a/ElectronsFlaskTest/html/sessionVoting.html
+++ b/ElectronsFlaskTest/html/sessionVoting.html
@@ -12,7 +12,7 @@
 	</head>
 	<body style="padding-top: 105px">
 		<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-			<ul class="navbar-nav">
+			<ul class="navbar-nav nav-fill">
 				<li class="nav-item active">
 					<a class="nav-link" href="session.html">Back</a>
 				</li>
