--- a/ElectronsFlaskTest/html/triggeringQuestion.html
+++ b/ElectronsFlaskTest/html/triggeringQuestion.html
@@ -16,7 +16,7 @@
 			<div class="row">
 			  <div class="col">
 			    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-			      <ul class="navbar-nav">
+						<ul class="navbar-nav nav-fill">
 			        <li class="nav-item active">
 			          <a class="nav-link" href="session.html">Back</a>
 			        </li>
@@ -50,7 +50,7 @@
 							<li class="nav-item">
 			          <a class="nav-link active" href="" id='print-pdf'> Report Generation</a>
 							</li>
-			      </ul>
+						</ul>
 			    </nav>
 			  </div>
 			</div>
