2 Decimals andd better formatting on voting

--- a/ElectronsFlaskTest/html/sessionVoting.html
+++ b/ElectronsFlaskTest/html/sessionVoting.html
@@ -48,9 +48,9 @@
 				</li>
 			</ul>
 		</nav>
-		<div id="CaptureVotingScheme" class="container-fluid" style="font-family: 'Roboto', sans-serif; height: 90vh; width: 100%; overflow-y: scroll; display: none">
-			<div class="row">
-				<form class="form-signin">
+		<div id="CaptureVotingScheme" class="container-fluid modal-dialog-centered" style="font-family: 'Roboto', sans-serif; height: 90vh; width: 100%; overflow-y: scroll; display: none">
+			<div class="row col">
+				<form class="form-signin" style="margin-left: 25em">
 					<h3>Select Voting Scheme: </h3>
 					<select class="form-control mt-2 shadow-sm" id="inputVotingScheme" onchange="showVotingOptions()">
 						<option value="no_voting">No voting required</option>
@@ -74,7 +74,7 @@
 				</div>
 				<div class="col-6" id="ideasSectionVoting">
 					<h3>Session Ideas</h3>
-					
+
 				</div>
 				<div class="col-3">
 					<form class="form-signin">
